jni-macros/tests/ui/bind_java_type/fail/constructor_return_type_shorthand.rs
// Test that constructors cannot have a non-void return type (shorthand syntax)

use jni::bind_java_type;

bind_java_type! {
    rust_type = TestClass,
    java_type = "com.example.TestClass",
    constructors = {
        fn new() -> jint
    }
}

fn main() {}
